# PHAIR_EHR

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg
.github/workflows/: README.md  advanced_cohort_selection.yml  calibrate.yml  causal_estimate.yml  causal_multitarget_pipeline.yml  causal_pipeline copy.yml  causal_pipeline.yml  causal_pipeline_multi_perf_test_uncensored.yml  causal_pipeline_perf_test.yml  causal_pipeline_perf_test_cls.yml  causal_pipeline_perf_test_uncensored.yml  causal_pipeline_sim_outcomes.yml  causal_pipeline_uncensored.yml  causal_test_criteria_and_stats.yaml  causal_test_prep_data_xgb.yml  code_counts.yml  docstring_coverage.yml  estimate.yml  format.yml  pipeline.yml  pipeline_causal.yml  pipeline_helpers.sh  test_resample_pipeline.yml  unittests.yml  utest_coverage_badge.yml
corebehrt/analysis_lib/: aggregation.py  data_loader.py  plotting.py
corebehrt/azure/: __main__.py  util.py
corebehrt/configs/: calibrate.yaml  encode.yaml  finetune.yaml  finetune_oot.yaml  finetune_predefined.yaml  simulate.yaml
corebehrt/constants/: causal.py  cohort.py  helper.py  paths.py
corebehrt/main/: create_outcomes.py  finetune_cv.py
corebehrt/main_causal/: README.md  ai_readme.md  build_tree.py  build_tree_diag.py  calibrate.py  calibrate_exp_y.py  calibrate_semisynthetic.py  encode.py  estimate.py  extract_criteria.py  finetune_exp_y.py  finetune_subpop.py  generate_outcomes_config.py  get_stats.py  prepare_ft_exp_y.py  select_cohort_advanced.py  select_cohort_full.py  simulate.py  simulate_from_encoding.py  simulate_from_sequence.py  simulate_semisynthetic.py  simulate_with_sampling.py  train_baseline.py  train_mlp.py  train_xgb.py
corebehrt/main_visualize/: README.md
corebehrt/ozempic_scripts/: extract_incl_excl_criteria.py
experiments/: __init__.py
tests/: test_extract_value_manual.py
(+691 files in other folders)
