[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "TRACE"
version = "0.9.1"
description = "A framework for processing and analyzing Electronic Health Records (EHR) data using BERT-based models."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Kiril Klein", email = "kikl@di.ku.dk" },
    { name = "Mikkel Odgaard" },
    { name = "Stephan Lorenzen" },
    { name = "Maria Montgomery" },
]
keywords = ["EHR", "BERT", "healthcare", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
include = ["corebehrt", "corebehrt.*"]

[project.optional-dependencies]
dev = [
    "ruff",
    "docstr-coverage",
    "coverage",
]

[project.urls]
Homepage = "https://github.com/FGA-DIKU/EHR"
Source = "https://github.com/FGA-DIKU/EHR"
Tracker = "https://github.com/FGA-DIKU/EHR/issues"

[tool.pyright]
exclude = ["**/*.ipynb", "sandbox/*"]

[tool.ruff]
line-length = 88
fix = true
lint.select = ["E9", "F63", "F7", "F82", "E711", "E712", "E713", "E714", "E721", "F401", "F402", "F405", "F811", "F821", "F822", "F823", "F841", "F901"]
